# SimpleTaskMananger

./: CMakeLists.txt  README.md  Task.hpp  TaskExecutor.cpp  TaskExecutor.hpp  TaskLambda.cpp  TaskLambda.hpp  TaskManager.cpp  TaskManager.hpp  TaskQueue.hpp  main.cpp
